tests/neg/semantic_funcptr_assign_mismatch.baa
// EXPECT: عدم تطابق توقيع مؤشر الدالة

صحيح اجمع(صحيح أ, صحيح ب) {
    إرجع أ + ب.
}

صحيح الرئيسية() {
    // توقيع غير مطابق: الدالة اجمع تتطلب معاملين.
    دالة(صحيح) -> صحيح ف = اجمع.
    إرجع ٠.
}

